<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#93BBCD"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Register"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="120dp"
        android:padding="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:background="@drawable/customborder_register"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:background="@drawable/customborder_email"
        android:hint="@string/editText_username"
        android:inputType="textEmailAddress"
        android:maxLength="100"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textView_register"
        app:layout_constraintLeft_toLeftOf="@id/textView_register"
        app:layout_constraintRight_toRightOf="@id/textView_register"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/customborder_email"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:maxLength="100"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editText_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/editText_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/customborder_email"
        android:hint="Password"
        android:inputType="numberPassword"
        android:maxLength="100"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/editText_password_reenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/customborder_email"
        android:hint="Password"
        android:inputType="numberPassword"
        android:maxLength="100"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/customborder_register"
        android:gravity="center"
        android:hint="@string/button_register"
        android:padding="10dp"
        android:text="@string/button_register"
        android:textColor="#E3E0E8"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_reenter"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/textView_have_account"
        android:padding="50dp"
        android:textColor="#3F51B5"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_register"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>